--- a/clusters/local/kustomization.yaml
+++ b/clusters/local/kustomization.yaml
@@ -1,7 +1,8 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 resources:
-  - ./apps
-  - ./metallb
-  - ./flux-system
-
+  - apps/metallb
+  - apps/ingress-nginx
+  - apps/mysql
+  - apps/wordpress
+  - apps/monitoring
