--- a/clusters/local/kustomization.yaml
+++ b/clusters/local/kustomization.yaml
@@ -1,8 +1,7 @@
-apiVersion: kustomize.config.k8s.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: local-apps
+  namespace: flux-system
 resources:
-  - apps/metallb
-  - apps/ingress-nginx
-  - apps/mysql
-  - apps/wordpress
-  - apps/monitoring
+  - ./apps
