Fix Kustomization apiVersion for FluxCD and stage all apps

--- a/clusters/local/apps/ingress-nginx/helmrelease.yaml
+++ b/clusters/local/apps/ingress-nginx/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
         kind: HelmRepository
         name: ingress-nginx
         namespace: flux-system
-  valuesFrom:
-    - kind: ConfigMap
-      name: ingress-nginx-values
+  values:
+    controller:
+      service:
+        type: LoadBalancer
