--- a/clusters/local/apps/ingress-nginx/kustomization.yaml
+++ b/clusters/local/apps/ingress-nginx/kustomization.yaml
@@ -1,11 +1,13 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: ingress-nginx
+  namespace: flux-system
 spec:
-  interval: 5m
-  path: "./apps/ingress-nginx"
+  interval: 1m
+  path: "./clusters/local/apps/ingress-nginx"
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
