--- a/clusters/local/apps/metallb/kustomization.yaml
+++ b/clusters/local/apps/metallb/kustomization.yaml
@@ -1,4 +1,13 @@
-apiVersion: kustomize.config.k8s.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
-resources:
-  - metallb-config.yaml
+metadata:
+  name: metallb
+  namespace: flux-system
+spec:
+  interval: 1m
+  path: "./clusters/local/apps/metallb"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
