--- a/clusters/local/apps/monitoring/kustomization.yaml
+++ b/clusters/local/apps/monitoring/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: mysql
+  name: monitoring
   namespace: flux-system
 spec:
   interval: 1m
-  path: "./clusters/local/apps/mysql"
+  path: "./clusters/local/apps/monitoring/grafana"
   prune: true
   sourceRef:
     kind: GitRepository
