--- a/clusters/local/apps/wordpress/kustomization.yaml
+++ b/clusters/local/apps/wordpress/kustomization.yaml
@@ -1,11 +1,13 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: wordpress
+  namespace: flux-system
 spec:
-  interval: 5m
-  path: "./apps/wordpress"
+  interval: 1m
+  path: "./clusters/local/apps/wordpress"
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
