Add Lua 404 redirect for ingress-nginx

--- a/clusters/local/apps/ingress-nginx/helmrelease.yaml
+++ b/clusters/local/apps/ingress-nginx/helmrelease.yaml
@@ -17,3 +17,15 @@ spec:
     controller:
       service:
         type: LoadBalancer
+controller:
+  extraVolumes:
+    - name: lua-scripts
+      configMap:
+        name: ingress-nginx-404-lua
+  extraVolumeMounts:
+    - name: lua-scripts
+      mountPath: /etc/nginx/lua
+      readOnly: true
+  config:
+    enable-underscores-in-headers: "true"
+    lua-resty-redis: "/etc/nginx/lua/404.lua"
