Fix apiVersion for all app Kustomizations

--- a/clusters/local/apps/monitoring/kustomization.yaml
+++ b/clusters/local/apps/monitoring/kustomization.yaml
@@ -1,13 +1,10 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: monitoring
   namespace: flux-system
-spec:
-  interval: 1m
-  path: "./clusters/local/apps/monitoring/grafana"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+resources:
+  - grafana/kustomization.yaml
+  - prometheus/kustomization.yaml
+  - promtail/kustomization.yaml
+  - loki/kustomization.yaml
