--- a/clusters/local/apps/ingress-nginx/kustomization.yaml
+++ b/clusters/local/apps/ingress-nginx/kustomization.yaml
@@ -1,13 +1,8 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: ingress-nginx
   namespace: flux-system
-spec:
-  interval: 1m
-  path: "./clusters/local/apps/ingress-nginx"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+resources:
+  - helmrelease.yaml
+  - lua-404-configmap.yaml
