--- a/clusters/local/apps/metallb/kustomization.yaml
+++ b/clusters/local/apps/metallb/kustomization.yaml
@@ -1,13 +1,7 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: metallb
   namespace: flux-system
-spec:
-  interval: 1m
-  path: "./clusters/local/apps/metallb"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+resources:
+  - metallb-config.yaml
