--- a/clusters/local/apps/wordpress/kustomization.yaml
+++ b/clusters/local/apps/wordpress/kustomization.yaml
@@ -1,13 +1,9 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: wordpress
   namespace: flux-system
-spec:
-  interval: 1m
-  path: "./clusters/local/apps/wordpress"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+resources:
+  - wordpress-deployment.yaml
+  - wordpress-service.yaml
+  - ingress.yaml
