Upgrade Grafana HelmRelease to v2 and ensure monitoring namespace

--- a/clusters/local/apps/monitoring/grafana/helmrelease.yaml
+++ b/clusters/local/apps/monitoring/grafana/helmrelease.yaml
@@ -1,10 +1,11 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
+  namespace: monitoring
   name: grafana
   namespace: monitoring
 spec:
-  interval: 1m
+  interval: 5m
   chart:
     spec:
       chart: grafana
