--- a/clusters/local/apps/mysql/mysql-service.yaml
+++ b/clusters/local/apps/mysql/mysql-service.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: mysql
 spec:
-  ports:
-    - port: 3306
   selector:
     app: mysql
+  ports:
+    - port: 3306
+      targetPort: 3306
