--- a/clusters/local/apps/mysql/kustomization.yaml
+++ b/clusters/local/apps/mysql/kustomization.yaml
@@ -1,13 +1,9 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: mysql
   namespace: flux-system
-spec:
-  interval: 1m
-  path: "./apps/mysql"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+resources:
+  - mysql-deployment.yaml
+  - mysql-service.yaml
+  - mysql-secret.sops.yaml
