--- a/clusters/local/apps/mysql/mysql-secret.sops.yaml
+++ b/clusters/local/apps/mysql/mysql-secret.sops.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
+  namespace: mysql
 type: Opaque
 stringData:
-  username: ENC[AES256_GCM,data:...,type:str]
-  password: ENC[AES256_GCM,data:...,type:str]
+  username: admin
+  password: StrongPassword123
