--- a/clusters/local/apps/mysql/kustomization.yaml
+++ b/clusters/local/apps/mysql/kustomization.yaml
@@ -1,9 +1,17 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: mysql
   namespace: flux-system
-resources:
-  - mysql-deployment.yaml
-  - mysql-service.yaml
-  - mysql-secret.sops.yaml
+spec:
+  interval: 1m
+  path: "./clusters/local/apps/mysql"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
