--- a/clusters/local/apps/mysql/mysql-secret.sops.yaml
+++ b/clusters/local/apps/mysql/mysql-secret.sops.yaml
@@ -1,9 +1,24 @@
-apiVersion: v1
-kind: Secret
+apiVersion: ENC[AES256_GCM,data:s9k=,iv:fbDyQN91bK0XmeTBW0Z2Z11ahCF7BQtu/RyuB5Vrmwo=,tag:We099hT9KwBKVJExBeutRA==,type:str]
+kind: ENC[AES256_GCM,data:zFelhpAZ,iv:PkLRwwqJYm+9WLjB/63E/lXEtV67kvh2rkX5whh1JcE=,tag:0ibLikxAjCW4eGzyhs/N5Q==,type:str]
 metadata:
-  name: mysql-secret
-  namespace: mysql
-type: Opaque
+    name: ENC[AES256_GCM,data:63l06A8AIvdI0mfh,iv:bBS/uxtIoo9wU/HiwlHQD1iUmXrvfmo6IhoPWmL9ZiE=,tag:F9+5pKqeo7yPJ8+/WSyQug==,type:str]
+    namespace: ENC[AES256_GCM,data:Gpy/wzQ=,iv:UMv/j1CSlOWODNUox6YFwqxenqTuaxIhD9wCZhuRDBE=,tag:Ea0ungJ6YS5grl9qXz+4fg==,type:str]
+type: ENC[AES256_GCM,data:EIFC0tQl,iv:CHhe876jZA73slMrSTtkGDuxJO/DcmwAmbDyQoxxVa0=,tag:JlBc546ObXZ5i6yQXe+a6A==,type:str]
 stringData:
-  username: admin
-  password: StrongPassword123
+    username: ENC[AES256_GCM,data:gtyHITY=,iv:YtLxYEIklNY6+G+2wuX0zv8BOuq2oijnnj3NYj//CAU=,tag:i6zOWCn+LDRxr3/UZ0P7HQ==,type:str]
+    password: ENC[AES256_GCM,data:3XrftLR6x3yFtT40Xf/Dbo4=,iv:POyxUDgXZKqfsOoFKIcRJ+7Rzd8X0UQbPYLYcFVxivQ=,tag:HgpF4EyQ1s9+fBjoHidftQ==,type:str]
+sops:
+    age:
+        - recipient: age1c08ekk9dfm5pluzcg36294xhrgrx6fpzp0zfwru0vsm7e0arvaqqhvdlvu
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzaGx2VTNZWUFhV1Bjb1Ay
+            SWhIZk9hNlJmbWIyVGxOOWlpOHZUY0RSQm4wCkhlMDVyNGZnenlqU1d0Z2E0ZDhE
+            RTRlY2N0TDlyc0FmNHJKdzlHeEEyK0kKLS0tIGtsbFNFRzBEanphRG85cVFVeDZO
+            UjIrd0FnOHdQZFpoL05ZbEl2YlA1a2MKfhT9b68eccWSKms7xsVZA8kFFGEtkvpl
+            KAbJ3KzNFVirdGmJRzWPwXH2OaDGv2ni9d8RP9Qdfu6C0esFe0H7Dg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-09-13T15:15:12Z"
+    mac: ENC[AES256_GCM,data:YrgaWA+NBDma/BibrVJGsGOJKTcMEwnHjOu8fsL2GsUv7s6I0q8gQB/hyqvSsX72koTrNTPJZaf1j0iSHuz1+zIDdOMIfpTihslBonX3yuSXtQtynZsxoqVRmaO501MMpconbmKH1O0/uKxqIZINIVISDN9oikyeC9/AgzIX7KQ=,iv:6KqquExQl8NoTfYKjGCthAKuElHE68TfDSqs+oNbe6o=,tag:mtg8ajAL9FIAhzjZ02PHCQ==,type:str]
+    unencrypted_suffix: _unencrypted
+    version: 3.10.2
