Enable SOPS decryption for MySQL secret

--- a/clusters/local/apps/mysql/mysql-secret.sops.yaml
+++ b/clusters/local/apps/mysql/mysql-secret.sops.yaml
@@ -1,24 +1,24 @@
-apiVersion: ENC[AES256_GCM,data:s9k=,iv:fbDyQN91bK0XmeTBW0Z2Z11ahCF7BQtu/RyuB5Vrmwo=,tag:We099hT9KwBKVJExBeutRA==,type:str]
-kind: ENC[AES256_GCM,data:zFelhpAZ,iv:PkLRwwqJYm+9WLjB/63E/lXEtV67kvh2rkX5whh1JcE=,tag:0ibLikxAjCW4eGzyhs/N5Q==,type:str]
+apiVersion: ENC[AES256_GCM,data:48o=,iv:hg2JQ55k6n5+70Mq1+hEPd4IckWY+6iv++2U8z6YK14=,tag:KQuO/i5vxP0JDZnzwqbD2w==,type:str]
+kind: ENC[AES256_GCM,data:teHGSnXR,iv:0S7WCAHqVI+9p1kiY2+n1RpgqbrrguHSOIuZ5ZnW9CU=,tag:6BfzPRkAe0txA7yONsrlDA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:63l06A8AIvdI0mfh,iv:bBS/uxtIoo9wU/HiwlHQD1iUmXrvfmo6IhoPWmL9ZiE=,tag:F9+5pKqeo7yPJ8+/WSyQug==,type:str]
-    namespace: ENC[AES256_GCM,data:Gpy/wzQ=,iv:UMv/j1CSlOWODNUox6YFwqxenqTuaxIhD9wCZhuRDBE=,tag:Ea0ungJ6YS5grl9qXz+4fg==,type:str]
-type: ENC[AES256_GCM,data:EIFC0tQl,iv:CHhe876jZA73slMrSTtkGDuxJO/DcmwAmbDyQoxxVa0=,tag:JlBc546ObXZ5i6yQXe+a6A==,type:str]
+    name: ENC[AES256_GCM,data:ApBGayQ0O2sM5gKv,iv:tOReaufBfwabV3c0LTvDV3kT1db60kV8dtGPvh/RN88=,tag:picmAK5DHh2R3tCLo9sN2A==,type:str]
+    namespace: ENC[AES256_GCM,data:bHua8yg=,iv:h+9mQMRP16jmjfXzG13dMWZOPGtkLDD6wAAij9tLMVs=,tag:GiFa+VjFRl2gQ02nNHJiYw==,type:str]
+type: ENC[AES256_GCM,data:NmmSpd+y,iv:krR5C0/9Hw8SwyA8xQYcAoBrOEwwVDcEHiDOuz+5fg4=,tag:jxTAzPe9i0z4z0HQVVdspQ==,type:str]
 stringData:
-    username: ENC[AES256_GCM,data:gtyHITY=,iv:YtLxYEIklNY6+G+2wuX0zv8BOuq2oijnnj3NYj//CAU=,tag:i6zOWCn+LDRxr3/UZ0P7HQ==,type:str]
-    password: ENC[AES256_GCM,data:3XrftLR6x3yFtT40Xf/Dbo4=,iv:POyxUDgXZKqfsOoFKIcRJ+7Rzd8X0UQbPYLYcFVxivQ=,tag:HgpF4EyQ1s9+fBjoHidftQ==,type:str]
+    username: ENC[AES256_GCM,data:848qfK8=,iv:opwa3UXzJmik3s9rMvxcV8iFcZvvJZoDGnUGYjI1CTE=,tag:FyMFIs7wyiICnnyzJx8+Hg==,type:str]
+    password: ENC[AES256_GCM,data:2Sw7PEG7w0sNNrkJK3TYgOg=,iv:UjG5xsMMwBrLN1BBrf2ELc6KG0YkBUOcTI0MbzJuZJY=,tag:VNmcsvnc7rdp9mCn+GYtMw==,type:str]
 sops:
     age:
-        - recipient: age1c08ekk9dfm5pluzcg36294xhrgrx6fpzp0zfwru0vsm7e0arvaqqhvdlvu
+        - recipient: age1xtwm3r345y6shjgv0wml8pqry5yhzmvjcd9x5tlj0f0e0fujrqfse4jwj5
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzaGx2VTNZWUFhV1Bjb1Ay
-            SWhIZk9hNlJmbWIyVGxOOWlpOHZUY0RSQm4wCkhlMDVyNGZnenlqU1d0Z2E0ZDhE
-            RTRlY2N0TDlyc0FmNHJKdzlHeEEyK0kKLS0tIGtsbFNFRzBEanphRG85cVFVeDZO
-            UjIrd0FnOHdQZFpoL05ZbEl2YlA1a2MKfhT9b68eccWSKms7xsVZA8kFFGEtkvpl
-            KAbJ3KzNFVirdGmJRzWPwXH2OaDGv2ni9d8RP9Qdfu6C0esFe0H7Dg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoYlBSOElkVWsxK2JRMkti
+            cVMzVWVwUFB4MDkxaldibzk4WjR1cStCZ3drCnp0UWxGRHpJNDRBRlk2UkVlQlEz
+            d3lCalg0eXZNUFhVWHJPZkVwMzdYdHMKLS0tIGxIamxYeFo0VFA0MEorSW5OdE9w
+            NnpsNGhLRkVxblJTd01HTEVydStDU2cKKkq+LMbfHSNO9O6hLfZ0yOQvF6Jd76Y0
+            0T8xIs35U3QKi2Ktyfg/uteufTQHRnW7skvUjKKoYRD3JvWHbhLMSA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-09-13T15:15:12Z"
-    mac: ENC[AES256_GCM,data:YrgaWA+NBDma/BibrVJGsGOJKTcMEwnHjOu8fsL2GsUv7s6I0q8gQB/hyqvSsX72koTrNTPJZaf1j0iSHuz1+zIDdOMIfpTihslBonX3yuSXtQtynZsxoqVRmaO501MMpconbmKH1O0/uKxqIZINIVISDN9oikyeC9/AgzIX7KQ=,iv:6KqquExQl8NoTfYKjGCthAKuElHE68TfDSqs+oNbe6o=,tag:mtg8ajAL9FIAhzjZ02PHCQ==,type:str]
+    lastmodified: "2025-09-13T15:48:01Z"
+    mac: ENC[AES256_GCM,data:D8j2FRsl2fo402AUsNwLLawyeF1nZ38l50a6WVIyt/vwupn7YyLT1B8HuAQ/blFZZMBv0jkMM+mHHN+kCYbUzE0dRZ0qukunvlodt9dt/1Cdo1xXM0cHMwPDrScVIkeer1l40eOrQkF8qUL+9kRA8HZDoDtPAP8WeZTYOB1E6Ig=,iv:GWdDWAUcSd235xXv00rh6t+YG7vFw1QuWtsgAcrFXWM=,tag:35OPXdv8z/fI7gf+H8mdyQ==,type:str]
     unencrypted_suffix: _unencrypted
     version: 3.10.2
