--- a/clusters/local/apps/wordpress/kustomization.yaml
+++ b/clusters/local/apps/wordpress/kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  path: "./apps/wordpress"
+  path: "./clusters/local/apps/wordpress"
   prune: true
   sourceRef:
     kind: GitRepository
