--- a/clusters/local/apps/monitoring/kustomization.yaml
+++ b/clusters/local/apps/monitoring/kustomization.yaml
@@ -1,8 +1,7 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: monitoring
-  namespace: flux-system
 spec:
   interval: 1m
   path: "./clusters/local/apps/monitoring"
@@ -10,4 +9,3 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-    namespace: flux-system
